welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:8: error: variable T is not a case class constructor, nor does it have an unapply/unapplySeq method
		var T(i)=getCouleurSol()
                    ^Array1:8: error: recursive variable i needs type
		var T(i)=getCouleurSol()
                     ^Array1:16: error: not found: value CouleurBrosse
		CouleurBrosse()=T(i)
                ^